Styled the toggle button.

--- a/main.css
+++ b/main.css
@@ -275,3 +275,40 @@ ul {
 }
 
 /* title end */
+
+/*
+=============== 
+Sidebar
+===============
+*/
+.sidebar-toggle {
+    position: fixed;
+    top: 2rem;
+    right: 3rem;
+    font-size: 2rem;
+    background-color: transparent;
+    border-color: transparent;
+    color: var(--primary-500);
+    transition: var(--transition);
+    cursor: pointer;
+    animation: bounce 2s ease-in-out infinite;
+}
+
+.sidebar-toggle:hover {
+    color: var(--primary-700);
+}
+
+@keyframes bounce {
+
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.5);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
