--- a/main.css
+++ b/main.css
@@ -312,3 +312,91 @@ Sidebar
         transform: scale(1);
     }
 }
+
+/* sidebar */
+.sidebar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+    row-gap: 1rem;
+    box-shadow: var(--shadow-2);
+    transition: var(--transition);
+    /* todo hide sidebar */
+}
+
+/* todo show sidebar */
+
+@media screen and (min-width: 676px) {
+
+    .sidebar {
+        width: 400px;
+    }
+
+}
+
+.sidebar-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 1.5rem;
+}
+
+.logo {
+    margin-bottom: 0;
+    font-weight: 700;
+}
+
+.logo span {
+    color: var(--primary-500);
+}
+
+.close-btn {
+    font-size: 1.75rem;
+    background-color: transparent;
+    border-color: transparent;
+    color: var(--red-dark);
+    transition: var(--transition);
+    cursor: pointer;
+}
+
+.close-btn:hover {
+    transform: rotate(360deg);
+}
+
+.links a {
+    display: block;
+    font-size: 1.5rem;
+    text-transform: capitalize;
+    padding: 1.5rem 1rem;
+    color: var(--grey-500);
+    transition: var(--transition);
+}
+
+.links a:hover {
+    background-color: var(--primary-300);
+    color: var(--primary-600);
+    padding-left: 1.75rem;
+}
+
+.social-icons {
+    display: flex;
+    padding-bottom: 2rem;
+    justify-content: center;
+    gap: 0 1rem;
+}
+
+.social-icons a {
+    font-size: 1.5rem;
+    /* margin: 0 0.5rem; */
+    color: var(--primary-500);
+    transition: var(--transition);
+}
+
+.social-icons a:hover {
+    color: var(--primary-300);
+}
