--- a/main.css
+++ b/main.css
@@ -326,7 +326,7 @@ Sidebar
     row-gap: 1rem;
     box-shadow: var(--shadow-2);
     transition: var(--transition);
-    /* todo hide sidebar */
+    transform: translateX(-100%);
 }
 
 /* todo show sidebar */
